crates/core/src/html/snapshots/epub_tailor_core__html__anchors__tests__id_conflict_aliases_and_rewrites_same_doc_snapshot.snap
---
source: crates/core/src/html/anchors.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p id="para"><sup>1</sup></p><p><a href="#para">back</a></p></body></html>
