crates/core/src/html/snapshots/epub_tailor_core__html__anchors__tests__span_id_moves_to_block_snapshot.snap
---
source: crates/core/src/html/anchors.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p id="x"><span>hi</span></p></body></html>
